k8s/postgres/pgadmin.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  serviceName: pgadmin-service
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: "dpage/pgadmin4"
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: pgadmin-data
          mountPath: /data/db
          subPath: data
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
  - port: 80
    protocol: TCP
